@@ -1,3 +1,5 @@
+* add environment function to Materials: function calculates the atomic
+  neighbors around a given position in the unit cell
 * documentation update regarding the Q2Ang and Q2AngFit functions
 * fixed inconsitency bug in NonCOP and HXRD's Q2Ang function (thanks to FZ)
 * SPEC-file parser improvements 
